objects/Group_Services_Repeatable__c.object
<CustomObject>
    <fields>
        <fullName>Account_Legal_Name__c</fullName>
        <formula>HYPERLINK( Group_Services_Tracking_ID__r.Name, Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Account_Legal_Name__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Legal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Description_Of_Production_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brief Description Of Production Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brief_Description_Of_Test_Change__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Brief Description Of Test Change</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COBRA_IT_Work_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>COBRA IT Work Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Claim_System__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Claim_System__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Claim System</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_ID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Client ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_1st_COBRA_Production_File_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st COBRA Production File Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_COBRA_Production_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st COBRA Production File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Was_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Was Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_1st_Production_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 1st Production File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_COBRA_Production_File_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd COBRA Production File Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_COBRA_Production_File_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd COBRA Production File Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Was_Loaded__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Was Loaded</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_2nd_Production_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date 2nd Production File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefit_Information_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefit Information Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefits_Loaded_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefits Loaded To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Benefits_Loaded_To_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Benefits Loaded To Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Mapping_Went_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Mapping Went To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Tape_Mapping_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Tape Mapping Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Test_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Test File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_COBRA_Test_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date COBRA Test File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Group_Change_Made_In_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Group Change Made In Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Group_Change_Made_In_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Group Change Made In Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Implementations_Notified_Of_Sale__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Date_Implementations_Notified_Of_Sale__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date Implementations Notified Of Sale</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Mapping_Went_To_Production__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Mapping Went To Production</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_SAR_Doc_View_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date SAR / Doc View Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Split_Table_Setup_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Split Table Setup Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Tape_Mapping_Submitted__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Tape Mapping Submitted</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_File_Is_Expected__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test File Is Expected</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_File_Was_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test File Was Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_HPCC_Loaded_To_Test__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test HPCC Loaded To Test</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_HPCC_Received__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test HPCC Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Test_Matrix_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Test Matrix Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Testing_Was_Completed__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Testing Was Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_From_Assignment__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Days_From_Assignment__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days From Assignment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GSRNameDesc__c</fullName>
        <formula>Name&amp;&quot; - &quot;&amp; Task_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GSRNameDesc</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Number__c</fullName>
        <formula>HYPERLINK( Group_Services_Tracking_ID__r.Name,Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Group_Number__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Group Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Services_Overall_Status__c</fullName>
        <label>Group Services Overall Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Active – Green</fullName>
                </value>
                <value>
                    <fullName>Active – Yellow</fullName>
                </value>
                <value>
                    <fullName>Active – Red</fullName>
                </value>
                <value>
                    <fullName>Complete - Green</fullName>
                </value>
                <value>
                    <fullName>Complete - Yellow</fullName>
                </value>
                <value>
                    <fullName>Complete - Red</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Group_Services_Tracking_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Group Services Tracking ID</label>
        <referenceTo>Group_Services__c</referenceTo>
        <relationshipLabel>Group Services Repeatable</relationshipLabel>
        <relationshipName>Group_Services_Repeatable</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Group_Structure_Sent_To_IC__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Group Structure Sent To IC</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ICTIDGSR__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ICTIDGSR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IT_Work_Request_Number__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>IT Work Request Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Case_Name__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Case_Name1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Case Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Effective_Date__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Effective_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Tracking_ID__c</fullName>
        <formula>HYPERLINK( Group_Services_Tracking_ID__r.Name, Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Tracking ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_Type__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Implementation_Type__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Implementation Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Benefit_Updates_Applicable__c</fullName>
        <label>Is Benefit Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Eligibility_Applicable__c</fullName>
        <label>Is Eligibility Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Eligibility_COBRA_Applicable__c</fullName>
        <label>Is Eligibility COBRA Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Structure_Applicable__c</fullName>
        <label>Is Group Structure Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Group_Updates_Applicable__c</fullName>
        <label>Is Group Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_HPCC_Updates_Applicable__c</fullName>
        <label>Is HPCC Updates Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_Tables_Data_Sets_Misc_Applicable__c</fullName>
        <label>Is Tables, Data Sets, Misc Applicable</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_This_A_COBRA_Only_File__c</fullName>
        <label>Is This A COBRA Only File</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Manual_Population_Details__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Manual Population Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Manual_Population__c</fullName>
        <label>Manual Population</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <formula>Owner:User.FirstName + &apos; &apos; + Owner:User.LastName + Owner:Queue.QueueName</formula>
        <label>Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Package Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Contract Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Production_Date__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Production_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Production Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Production_Enrollment_File_Status__c</fullName>
        <label>Production Enrollment File Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Waiting on File Delivery</fullName>
                    <label>Waiting On File Delivery</label>
                </value>
                <value>
                    <fullName>File Received and Being Reviewed/Loaded</fullName>
                    <label>File Received And Being Reviewed/Loaded</label>
                </value>
                <value>
                    <fullName>File Loading Completed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Production_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Production_Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Production Package Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <formula>Group_Services_Tracking_ID__r.Implementation_Tracking_ID__r.Region__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Region</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIN_Value__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>TIN Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Task Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Contract_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Contract Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Test_File_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test File Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Test_Package_Code_s__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Test Package Code(s)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Group Services Repeatable</label>
    <listViews>
        <fullName>Group_Services_National_Group_Services_Repeatable</fullName>
        <filterScope>Queue</filterScope>
        <label>Group Services - National</label>
        <queue>Group_Services_National</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>GSAREPEAT-{000000}</displayFormat>
        <label>Group Services Repeatable Tracking ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Group Services Repeatable</pluralLabel>
    <recordTypes>
        <fullName>National_NASCO</fullName>
        <active>true</active>
        <label>National NASCO</label>
    </recordTypes>
    <recordTypes>
        <fullName>National_WGS</fullName>
        <active>true</active>
        <label>National WGS</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>VR_01_Is_Eligibility_applicable</fullName>
        <active>true</active>
        <errorConditionFormula>AND (!$User.BypassValidation__c,ISPICKVAL(Is_Eligibility_Applicable__c,&apos;Yes&apos;), ISBLANK( TEXT(Production_Enrollment_File_Status__c)))</errorConditionFormula>
        <errorDisplayField>Production_Enrollment_File_Status__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>